tests/errors/must_return_a_value.n
fn foo() -> int {
    print("no return");
}

fn main() {
}
